--- a/client/package.json
+++ b/client/package.json
@@ -25,10 +25,11 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
-    "react-toastify": "^10.0.5",
+    "react-toastify": "^10.0.6",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
