--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.16.0",
     "lucide-react": "^0.446.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
